Update project name and dependencies in pyproject.toml; add unit tests for Nushell functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,17 @@
 [project]
-name = "rez-nushell-plugin"
+name = "rez_nushell"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = [
+dependencies = []
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
     "rez>=3.2.1",
 ]
